Fixed responsive spacing. Look at that handsome centered dancer!

--- a/discoStyle.css
+++ b/discoStyle.css
@@ -3,12 +3,15 @@
     padding-bottom: 1vh;
 }
 .body {
+    position: absolute;
+    z-index: -10;
     height: 100vh;
-    width: q00vw;
+    width: 100vw;
     margin: 0, 0, 0, 0;
 }
 .game-area {
-    position: relative;
+    position: absolute;
+    z-index: -5;
     height: 90%;
     width: 100%;
     background-position: center;
@@ -18,6 +21,8 @@
 }
 
 .game-area > p {
+    position: relative;
+    z-index: 2;
     height: 110px;
     font-family: Tahoma;
     font-size: 50px;
@@ -27,21 +32,16 @@
 }
 
 .disco-dude {
-    transform-origin: center;
-    top: 25vh;
-    left: 35vw;
-    position: absolute;
+    position: relative;
+    z-index: -1;
+    margin: auto;
+    top: 10vh;
+    left: 10px;
 }
+
 @media only screen and (max-width: 750px) {
-    .disco-dude {height: 50vh; left: 30vw;}
+    .disco-dude {height: 60%; top:20vh}
 } 
-@media only screen and (max-width: 450px) {
-    .disco-dude {left: 18vw;}
-    
-}
-@media only screen and (min-width: 1000px) {
-    .disco-dude {left: 36vw;}
-}
 
 #scoreCard, #highScore {
     font-size: 5vh;
@@ -50,8 +50,13 @@
 }
 
 #tip {
-    background-size: 1vh;
-    font-size: 5vh;
+    position: fixed;
+    z-index: 2;
+    margin: auto;
+    height: auto;
+    width: 100%;
+    font-size: 4vw;
+    padding-bottom: 1vh;
 }
 
 #lives {
@@ -64,7 +69,7 @@
     #scoreCard, #highScore, #lives {font-size: 4.5vw;}
 } 
 
-.pause-button, .controls {
+.pause-button, .controls{
     font-size: 3vw;
     height: 8vh;
     width: 15vw;
@@ -84,23 +89,36 @@
 }
 
 .start {
+    position: relative;
+    z-index: 10;
+    top: 10%;
+    margin: auto;
     font-size: 6vh;
     height: 10vh;
     width: 20vw;
-    top: 45vh;
-    left: 42vw;
     border-radius: 10px;
-    position: absolute;
     font-family: Impact;
     text-align: center;
     color: lightskyblue;
     background-color: rgb(252, 239, 181);
     border-color: lightcoral;
+    display: flex;
+}
+
+h2 {
+    margin: auto;
+    font-size: 6vh;
+    font-family: Impact;
+    text-align: center;
+    color: lightskyblue;
 }
 @media only screen and (max-width: 450px) {
     .start { 
     width: 20vw;
     font-size: 3vh;
+    }
+    h2 {
+        font-size: 5vw;
     }
 }
 
